【优化】权限管理